# 8INF840-1

./: .gitignore  CMakeLists.txt  GenealogyTree.sln  README.md
GenealogyTree/: GenealogyTree.vcxproj  GenealogyTree.vcxproj.filters
TP1/: CMakeLists.txt  TP1.sln
TP1/CardGameWar/: Card.cpp  Card.h  CardGameWar.vcxproj  CardGameWar.vcxproj.filters  Game.cpp  Game.h  Player.cpp  Player.h  Stack.h
TP1/Dictionnary/: Dictionnary.cpp  Dictionnary.h  Dictionnary.vcxproj  Dictionnary.vcxproj.filters  stdafx.cpp
TP1/Factory/: Factory.cpp  Factory.vcxproj  Factory.vcxproj.filters  File.cpp  File.h  Machine.cpp  Machine.h  Piece.h  stdafx.cpp
TP1/GenealogyTree/: Constants.cpp  Constants.h  FamilyTree.cpp  FamilyTree.h  GenealogyTree.vcxproj  GenealogyTree.vcxproj.filters  NPersonTree.cpp  NPersonTree.h  NTree.cpp  NTree.h  Person.cpp  Person.h  PersonNode.cpp  PersonNode.h  TreeNode.cpp  TreeNode.h  main.cpp  stdafx.cpp  stdafx.h
TP1/List/: List.cpp  List.h  List.vcxproj  List.vcxproj.filters  Node.cpp  Node.h  main.cpp  stdafx.cpp
TP2/: TP2.sln
TP2/Hypergraph/: Hypergraph.cpp  Hypergraph.vcxproj  Hypergraph.vcxproj.filters  main.cpp  stdafx.cpp
TP2/KdTree/: KdTree.cpp  KdTree.h  KdTree.vcxproj  KdTree.vcxproj.filters  Main.cpp  stdafx.cpp
TP2/Maze/: Main.cpp  Maze.cpp  Maze.h  Maze.vcxproj  Maze.vcxproj.filters  Node.cpp  Node.h  stdafx.cpp
TP2/QuadTree/: Frame.cpp  Frame.h  QuadTree.vcxproj  QuadTree.vcxproj.filters  quadtree.h
TP2/WebReferencement/: Hypergraphe.cpp  Hypergraphe.h  LUrlParser.cpp  WebReferencement.cpp  WebReferencement.vcxproj  WebReferencement.vcxproj.filters  edgesTest.txt  nodesTest.txt  stdafx.cpp
TP2/WebReferencement/libs/: LUrlParser.h
TP2/enc_temp_folder/8f6c4fb4a8508e9f1cfef8ddfbc9a153/: Node.h
TP2/enc_temp_folder/c230285baf6d462352abc464e6b1e940/: Maze.cpp
